@@ -25,6 +25,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+24-May-2013 Jean-Marie Simonet
+ # [#30689] jQuery not loaded in Isis error page. Thanks Dennis Hermatski
+
 22-May-2013 Jean-Marie Simonet
  # [#30982] Fast links for item language associations management. Thanks Roberto Segura.
  # [#30956] No published field in Contacts Component
